--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
   "devDependencies": {
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
-    "svelte": "^3.44.0"
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.5",
+    "svelte": "^3.44.0",
+    "tailwindcss": "^3.0.16"
   },
   "type": "module",
-  "dependencies": {
-    "@fontsource/fira-mono": "^4.5.0",
-    "@lukeed/uuid": "^2.0.0",
-    "cookie": "^0.4.1"
-  }
+  "dependencies": {}
 }
