--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
     "preview": "svelte-kit preview"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "next",
+    "@sveltejs/adapter-static": "^1.0.0-next.26",
     "@sveltejs/kit": "next",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
     "svelte": "^3.44.0",
     "tailwindcss": "^3.0.16"
   },
-  "type": "module",
-  "dependencies": {}
+  "type": "module"
 }
