--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "svelte": "^3.44.0",
     "tailwindcss": "^3.0.16"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "svelte-icons": "^2.1.0"
+  }
 }
