Updated now page & added new project

--- a/src/lib/projects.json
+++ b/src/lib/projects.json
@@ -81,5 +81,24 @@
     "description": "An iOS app for the Homeflix application built using React Native. The app is made to provide the main functionality of the web app that lets users consume Movies & TV Shows and make use of the native features of iOS such as Airplay.",
     "technologies": ["React Native", "React Navigation", "NativeWind"],
     "github": "https://github.com/ytsruh/homeflix-mobile"
+  },
+  {
+    "name": "Kaizen",
+    "id": 10,
+    "img": "img/kaizen.png",
+    "description": "A larger project combining a number of previous ideas. Kaizen is targeted at helping new developers by providing tools to help the learning process. Two public API's are available for developers to build their own apps. TypeScript is used extensively to produce more reliability over time as well as a relational database.",
+    "technologies": [
+      "Next JS",
+      "Typescript",
+      "React",
+      "Tailwind CSS",
+      "Prisma",
+      "MySQL",
+      "NextAuth",
+      "Nodemailer",
+      "Azure Storage"
+    ],
+    "link": "https://kaizen.ytsruh.com/",
+    "github": "https://github.com/ytsruh/kaizen"
   }
 ]
