--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@astrojs/partytown": "^1.2.3",
     "astro": "^2.1.5",
     "svelte-icons": "^2.1.0"
   }
