uodated astro version & content changes

--- a/src/lib/projects.json
+++ b/src/lib/projects.json
@@ -1,79 +1,27 @@
 [
   {
-    "name": "St Helens Marriage Index",
-    "id": 1,
-    "img": "img/marriages.webp",
-    "description": "An online database of marriage in the St Helens area between 1536 & 2010. Built using React and Azure technologies the site takes years of historical records and makes it easy & fast to search through them.",
-    "technologies": ["React JS", "Materialize CSS", "Azure Functions", "Azure Table Storage"],
-    "github": "https://github.com/ytsruh/marriage-index"
-  },
-  {
     "name": "Homethings",
-    "id": 2,
-    "img": "img/homethings.webp",
-    "description": "The home & personal app built using Next JS & Postgres DB. The app has full authentication using JWT & encryption for security and allows a user to store personal book lists & important documents.",
-    "technologies": ["Next JS", "React", "Tailwind CSS", "Vercel", "Postgres", "Next Auth"],
+    "id": 1,
+    "img": "../img/homethings.webp",
+    "description": "The home & personal playground built using Go, Next JS & Postgres DB. The app features a number of toy projects including a custom built search engine, personal to do app, document storage as well as others. A companion mobile is available built using React Native.",
+    "technologies": ["Go / Golang", "Echo", "Next JS", "React", "Tailwind CSS", "Vercel", "Postgres"],
     "link": "https://homethings.ytsruh.com/",
     "github": "https://github.com/ytsruh/homethings"
   },
   {
-    "name": "Tensorflow Predictions",
+    "name": "Webiliti",
+    "id": 2,
+    "img": "../img/webiliti.png",
+    "description": "The web testing app built using SvelteKit & Hono. The SvelteKit app has the majority of the functionality with a few serverless api routes to handle communication with a seperate Hono app. The app runs a number of tests on a given page to allow a user to track web performance over time.",
+    "technologies": ["Svelte", "SvelteKit", "Tailwind CSS", "HonoJS", "Railway", "Postgres", "Auth JS"],
+    "link": "https://www.webiliti.com/"
+  },
+  {
+    "name": "Finly & Umda",
     "id": 3,
-    "img": "img/tensorflow.webp",
-    "description": "A short project to start learning TensorFlow JS. This project aims to predict a cars miles per gallon by taking mpg & horsepower as inputs. In this project the data was loaded, a model was created & trained before making some predictions based on more input data. All of this was visualised using tfjs-vis library.",
-    "technologies": ["TensorflowJS", "Machine Learning"],
-    "link": "https://ytsruh.github.io/tensorflow-predictions/",
-    "github": "https://github.com/ytsruh/tensorflow-predictions"
-  },
-  {
-    "name": "Pokedex",
-    "id": 4,
-    "img": "img/pokedex.webp",
-    "description": "Built using Vanilla JavaScript, this project is a simple consumer of the Poke API. A user can filter through the original 151 Pokemon and see some very basic information on each of them. The PaperCSS library was used for styling to complete the 'minimal' effect & keep the size of the app extremely small.",
-    "technologies": ["Vanilla JS", "Paper CSS", "Poke API"],
-    "link": "https://ytsruh.github.io/pokedex/",
-    "github": "https://github.com/ytsruh/pokedex"
-  },
-  {
-    "name": "Wrongmove",
-    "id": 5,
-    "img": "img/wrongmove.webp",
-    "description": "A collaboration with a friend, Wrongmove is a clone of the Rightmove website using NextJS &Vanilla CSS on the client side with an Express API and Postgres database on the server side. The app has full CRUD functionality including image upload.",
-    "technologies": [
-      "Next JS",
-      "React",
-      "Vanilla CSS",
-      "Vercel",
-      "Postgres",
-      "JWT Authentication",
-      "ExpressJS"
-    ],
-    "github": "https://github.com/ytsruh/wrongmove",
-    "link": "https://wrongmove.ytsruh.com/"
-  },
-  {
-    "name": "Goly",
-    "id": 6,
-    "img": "img/goly.webp",
-    "description": "A clone of bitly built using Go, the Fiber framework, Svelte & Postgres. There is full CRUD functionality through the API & feedback banner on the client. The API includes an in-memory rate limiter, monitoring endpoint, file compression & a counter for when a redirect is clicked.",
-    "technologies": ["Go", "SvelteKit", "Tailwind CSS", "Postgres", "JWT Authentication", "Fiber"],
-    "github": "https://github.com/ytsruh/goly"
-  },
-  {
-    "name": "Search Engine",
-    "id": 7,
-    "img": "img/search-engine.webp",
-    "description": "A self built web crawler and search engine built using Go & Svelte. This app is a fully functioning search engine, crawling over 1000 pages per day & indexing over 100 per day to be available to search. The app also has a public statistics page to view progress & an autenticated admin section to control the crawling behaviour.",
-    "technologies": [
-      "Go",
-      "SvelteKit",
-      "Tailwind CSS",
-      "Skeleton UI",
-      "Postgres",
-      "JWT Authentication",
-      "Fiber"
-    ],
-    "github": "https://github.com/ytsruh/search-engine",
-    "link": "https://search.ytsruh.com/"
+    "img": "https://placehold.co/600x400?text=Coming+Soon",
+    "description": "Finly is a personal finance app built using Go, Echo & Postgres. The app is designed to help users track their spending and money habits. Umda is a companion API that holds relevant market data for the app.",
+    "technologies": ["Go / Golang", "Echo", "React", "Tailwind CSS", "Railway", "Postgres"],
+    "link": "https://www.finly.cc"
   }
 ]
