--- a/package.json
+++ b/package.json
@@ -1,26 +1,24 @@
 {
-  "name": "portfolio",
-  "version": "1.0.0",
+  "name": "ytsruh",
+  "type": "module",
+  "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview"
+    "build": "astro check && astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
-  "devDependencies": {
+  "dependencies": {
+    "@astrojs/check": "^0.5.2",
+    "@astrojs/partytown": "^2.0.4",
     "@astrojs/sitemap": "^3.0.5",
     "@astrojs/svelte": "^5.0.3",
     "@astrojs/tailwind": "^5.1.0",
-    "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.5",
-    "prettier-plugin-astro": "^0.2.0",
-    "tailwindcss": "^3.0.16"
-  },
-  "type": "module",
-  "dependencies": {
-    "@astrojs/partytown": "^2.0.4",
-    "astro": "^4.2.8",
-    "svelte": "^4.2.9",
-    "svelte-icons": "^2.1.0"
+    "astro": "^4.3.5",
+    "svelte": "^4.2.10",
+    "svelte-icons": "^2.1.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   }
 }
