--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "svelte-icons": "^2.1.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "wrangler": "^3.57.1"
   }
 }
