--- a/package.json
+++ b/package.json
@@ -3,26 +3,20 @@
   "type": "module",
   "scripts": {
     "dev": "astro dev",
-    "dev-functions": "wrangler pages dev --live-reload=true dist",
     "build": "astro check && astro build",
-    "preview:astro": "astro preview",
-    "preview": "wrangler pages dev --live-reload=true dist",
-    "deploy": "npm run build && wrangler pages deploy dist"
+    "preview": "astro preview"
   },
   "dependencies": {
-    "@astrojs/check": "^0.5.10",
-    "@astrojs/partytown": "^2.1.0",
-    "@astrojs/sitemap": "^3.1.5",
-    "@astrojs/svelte": "^5.4.0",
+    "@astrojs/check": "^0.8.3",
+    "@astrojs/partytown": "^2.1.1",
+    "@astrojs/sitemap": "^3.1.6",
+    "@astrojs/svelte": "^5.7.0",
     "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.9.1",
+    "astro": "^4.12.2",
     "svelte": "^4.2.17",
     "svelte-icons": "^2.1.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
-  },
-  "devDependencies": {
-    "wrangler": "^3.57.1"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "4.18.0"
