--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,6 @@
 .DS_Store
-node_modules
-/dist
-/package
-.env
-.vscode
-package-lock.json
-_archive
-.svelte-kit
-build
-test-results
+/node_modules/
+
+# React Router
+/.react-router/
+/build/
